fixed scroll & layout problems

--- a/src/app/pages/home/home.page.scss
+++ b/src/app/pages/home/home.page.scss
@@ -49,7 +49,7 @@
 }
 
 .showcase::before, .showcase::after {
-  content: 'HELLO';
+  content: '';
   position: absolute;
   height: 100px;
   bottom: -70px;
