--- a/src/theme/mixins.scss
+++ b/src/theme/mixins.scss
@@ -1,3 +1,12 @@
+@mixin layout {
+  position: fixed;
+  top: 0;
+  left: 0;
+  height: 100vh;
+  width: 100vw;
+  overflow: scroll;
+}
+
 @mixin flex {
   display: flex;
   justify-content: center;
@@ -14,7 +23,7 @@
 }
 
 @mixin container {
-  max-width: 1100px;
+  max-width: 1280px;
   margin: 0 auto;
   overflow: auto;
   padding: 0 40px;
